# vehicle-parking-system

./: .coverage  README.md  cli_tool.py  cmd-tracker.md  events_table.py  global_etl.py  my_db.db  notes.md  pyproject.toml  sql_trigger.py  test.py
data/: ReadMe.txt  parking_events.csv  parking_events.parquet  parking_events_large.csv
parking_events/: cli_tool.py  csv_to_sql.py  events_table.py  sql_trigger.py
parking_toolkit/: .coverage  analysis_toolkit.py  final_joined_events.parquet
shared_config/: config.py
tests/: test_cli2.py  test_etl.py  test_main_cli.py
