[project]
name = "vehicle-parking-system"
version = "0.1.0"
description = ""
authors = [
    {name = "sudarshan710",email = "sudarshanhope710@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
